add Exmoor trip

--- a/_posts/2017-07-31-Snowdon.md
+++ b/_posts/2017-07-31-Snowdon.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Pen-y-Pass 2 SnowdonPeak
-categories: [Hiking]
+categories: [Leisure]
 tags: [trailrunning, mountaineering, hiking, route, nationalpark]
 fullview: true
 comments: true
