--- a/_posts/2017-10-13-Exmoor.md
+++ b/_posts/2017-10-13-Exmoor.md
@@ -7,7 +7,7 @@ fullview: true
 comments: true
 ---
 
-## Summary
+### Summary
 
 Exmoor National Park is one of the International Dark Sky Reserve. It should be a good place to do stargazing when the sky is clear!
 
@@ -17,7 +17,9 @@ Exmoor National Park is one of the International Dark Sky Reserve. It should be 
 * Return Time: 29 Oct 2017 Sunday 17:00
 * Place to stay: Cloud Farm Campsite, Lynton, Exmoor EX35 6NU
 
-## Weather and Climate
+Interactive map to explore: [Point-of-Interest](http://www.visit-exmoor.co.uk/point-of-interest/nutcombe-bottom#poi_map_wrap)
+
+### Weather and Climate
 
 Statistics from [meteoblue](https://www.meteoblue.com/en/weather/forecast/modelclimate/exmoor-national-park_united-kingdom_2649801)
 
@@ -25,7 +27,7 @@ I won't be able to promise on this! October isn't the best time for clear skies.
 
 Temperature wise, during the day it's between 6 to 13 degree. In a cold night, it could reach 0 in October. I would expect it being a bit windy along the coast. So runners are recommended to take a waterproof jacket with you. Better to keep warm when running along the beautiful coast.
 
-## Camping and Accommodation
+### Camping and Accommodation
 
 Again, I need to stress the weather here. If it starts raining heavily, it would be quite misserable for camping. The stats show 15.6 dry days in October. So it would be dry for half of the time hopefully. We really need to wait and see until the week before this trip.
 
@@ -34,12 +36,16 @@ Camping Kits:
 1. Tent. A would recommend teamming up with another person for setting up a two-man tent. It just saves a lot of time for hard work.
 1. Sleeping bag. At least to carry a 3 Season sleeping bag, which handles temperature from 0 or above.
 1. Sleeping Mat. To keep the comfort and the moisture out.
+1. Headlamp or hand torch.
 
 I don't really see us cooking there. It just feels too much efforts. So we need to look up for places where we can get food and dinner etc.
 
 If anyone feels camping is not for them, there are accommodations available nearby. I would strongly suggest stay under a roof when it's forecasted to rain hard.
 
-## Exmoor Trail Running Challenge
+### Transportation
+
+
+### Exmoor Trail Running Challenge
 
 Runners: 小伍, Jun, Michael, 于智, DJ
 
@@ -65,6 +71,8 @@ Video of last year's event:
 
 ## Stargazing
 
+[A wild weekend in Exmoor, chasing stags and stars](http://www.telegraph.co.uk/travel/destinations/europe/united-kingdom/england/devon/articles/Exmoor-into-the-wild-with-stags-and-stars/)
+
 Recommended stargazing locations on Exmoor include:
 
 1. Brendon Common (South of Lynmouth)
@@ -75,3 +83,9 @@ Recommended stargazing locations on Exmoor include:
 6. Winsford Hill
 
 Telescope Hire on Exmoor is available on [Darkskytelescopehire.co.uk](http://www.darkskytelescopehire.co.uk/exmoor-dark-sky-experience/).
+
+### Other Activities
+
+There are organised dusk safaris for the Dark Skies Festival. However, they appear to be sold out.
+
+Not so sure what you guys are up to. Let me konw what you would be interested in. I can try to find some more informations.
