--- a/_posts/2017-10-13-Exmoor.md
+++ b/_posts/2017-10-13-Exmoor.md
@@ -3,11 +3,9 @@ layout: post
 title: Exmoor National Park
 categories: [Leisure]
 tags: [trailrunning, mountaineering, hiking, route, nationalpark, camping]
-fullview: true
 comments: true
+excerpt_separator: <!--more-->
 ---
-
-### Summary
 
 Exmoor National Park is one of the International Dark Sky Reserve. It should be a good place to do stargazing when the sky is clear!
 
@@ -16,7 +14,7 @@ Exmoor National Park is one of the International Dark Sky Reserve. It should be 
 * Departure Time: 28 Oct 2017 Saturday 12:00
 * Return Time: 29 Oct 2017 Sunday 17:00
 * Place to stay: Cloud Farm Campsite, Lynton, Exmoor EX35 6NU
-
+<!--more-->
 Interactive map to explore: [Point-of-Interest](http://www.visit-exmoor.co.uk/point-of-interest/nutcombe-bottom#poi_map_wrap)
 
 ### Weather and Climate
@@ -44,6 +42,10 @@ If anyone feels camping is not for them, there are accommodations available near
 
 ### Transportation
 
+We currently have 9 people want to go. But it seems I'm the only one willing to drive so far. Finding one or two extra drivers would help greatly!
+
+* Plan A: I can rent a 7 seats car and drive to the park. Another small group of people can take the train from London Paddington to Taunton (2hrs) and then bus from Taunton Station to Minehead. I can drop 1st group at the campsite and come back to pick them up.
+* Plan B: I've tried to get a quote for hiring a 15 seats coach for two days to Exmoor and back from London. It's about £750 in total.
 
 ### Exmoor Trail Running Challenge
 
@@ -66,10 +68,11 @@ Time: 29 Oct 2017, from 8:30 am to 3pm
 Half Marathon Trail:
 <iframe src="https://www.google.com/maps/d/embed?mid=1pL8HIeIdyWxvBIleO8jgqDccLYo" width="640" height="480"></iframe>
 
+
 Video of last year's event:
 <iframe src="https://player.vimeo.com/video/141690050" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
-## Stargazing
+### Stargazing
 
 [A wild weekend in Exmoor, chasing stags and stars](http://www.telegraph.co.uk/travel/destinations/europe/united-kingdom/england/devon/articles/Exmoor-into-the-wild-with-stags-and-stars/)
 
