--- a/_posts/2017-10-13-Exmoor.md
+++ b/_posts/2017-10-13-Exmoor.md
@@ -9,12 +9,15 @@ excerpt_separator: <!--more-->
 
 Exmoor National Park is one of the International Dark Sky Reserve. It should be a good place to do stargazing when the sky is clear!
 
+Summary:
+
 * Location: Exmoor National Park
 * Events: [Dark Skies Festival](http://www.exmoor-nationalpark.gov.uk/enjoying/stargazing/dark-skies-festival) and [Exmoor Trail Running Challenge](https://trailevents.co/events/exmoor/)
 * Departure Time: 28 Oct 2017 Saturday 12:00
 * Return Time: 29 Oct 2017 Sunday 17:00
 * Place to stay: Cloud Farm Campsite, Lynton, Exmoor EX35 6NU
 <!--more-->
+
 Interactive map to explore: [Point-of-Interest](http://www.visit-exmoor.co.uk/point-of-interest/nutcombe-bottom#poi_map_wrap)
 
 ### Weather and Climate
