--- a/_posts/2017-10-13-Exmoor.md
+++ b/_posts/2017-10-13-Exmoor.md
@@ -77,7 +77,7 @@ Video of last year's event:
 
 ### Stargazing
 
-[A wild weekend in Exmoor, chasing stags and stars](http://www.telegraph.co.uk/travel/destinations/europe/united-kingdom/england/devon/articles/Exmoor-into-the-wild-with-stags-and-stars/)
+The Telegraph article[A wild weekend in Exmoor, chasing stags and stars](http://www.telegraph.co.uk/travel/destinations/europe/united-kingdom/england/devon/articles/Exmoor-into-the-wild-with-stags-and-stars/)
 
 Recommended stargazing locations on Exmoor include:
 
